# ToddLinux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  check_req.py  clean.py  clean_chroot.sh  install_from_host.py  main.py  pyproject.toml  pyrightconfig.json  sign_lfs.py  status.json-back  test.json
.github/workflows/: build.yml
chroot_env/: prepare_chroot.py
chroot_env/more_cross_tools/: run_tool_scripts.py
chroot_env/prepare_chroot/: prepare_chroot.py
chroot_env/tmp_tools/: run_tool_scripts.py
host/: backup.sh  clean.py  clean_chroot.py  enter_chroot.py  setup.py  sign_lfs.py
host/check_req/: check_requirements.py
host/cross_tools/: build.py
host/fetch_sources/: wget_list.csv
host/setup/: __init__.py  check_req.py  clean_chroot.py  create_directory_layout.py  install_from_chroot.py  install_from_host.py  install_host_toolchain.py  prepare_chroot.py
host_chroot_packages/: make.sh  packages.json  util-linux.sh
host_system_scripts/: check_requirements.py  clean.py  requirements.csv
host_system_scripts/check_requirements/: check_requirements.py
host_system_scripts/chroot/: chroot.py
pkg_manager/: __init__.py  download.py  index.py  install.py  reqs.py  sym_reqs.py
requirements/: ISO.md  PackageFormat.md  PackageManager.md  Toolchain.md
todd/: build.py  check_req.py  host.py  install_from_host.py  main.py
todd/check_req/: __init__.py  (+1 more)
todd_linux/: __main__.py  backup.sh  check_req.py  enter_chroot.py  install_from_chroot.py  install_from_host.py  main.py  prepare_chroot.py  reqs.py  setup.py  sign_lfs.py  sym_reqs.py
(+83 files in other folders)
