[tool.poetry]
name = "ToddLinux"
version = "0.1.0"
description = "Hobbyist Linux Distribution based on LFS."
readme = "README.md"
authors = ["Adam Jędrzejewski, Christopher Besch"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
todd = { git = "https://github.com/ToddLinux/Todd", branch = "main" }
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"todd_linux" = "todd_linux.__main__:main"
